RESOLVED FIXED201686
[MacOS/iOS] imported/w3c/web-platform-tests/service-workers/cache-storage/serviceworker/cache-abort.https.html is sometimes crashing in Debug
https://bugs.webkit.org/show_bug.cgi?id=201686
Summary [MacOS/iOS] imported/w3c/web-platform-tests/service-workers/cache-storage/ser...
youenn fablet
Reported 2019-09-11 07:13:51 PDT
SSERTION FAILED: m_downloadMap.get(taskIdentifier).downloadID() /Users/youenn/dev/Apple/OpenSource/Source/WebKit/NetworkProcess/cocoa/NetworkSessionCocoa.mm(1201) : WebKit::DownloadID WebKit::NetworkSessionCocoa::downloadID(NetworkDataTaskCocoa::TaskIdentifier) 1 0x1345bcd99 WTFCrash 2 0x11324d4cb WTFCrashWithInfo(int, char const*, char const*, int) 3 0x11363c969 WebKit::NetworkSessionCocoa::downloadID(unsigned long long) 4 0x113637654 WebKit::NetworkSessionCocoa::continueDidReceiveChallenge(WebCore::AuthenticationChallenge const&, unsigned long long, WebKit::NetworkDataTaskCocoa*, WTF::CompletionHandler<void (WebKit::AuthenticationChallengeDisposition, WebCore::Credential const&)>&&) 5 0x113636f80 -[WKNetworkSessionDelegate URLSession:task:didReceiveChallenge:completionHandler:]
Attachments
Patch (3.12 KB, patch)
2019-09-11 07:21 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2019-09-11 07:21:51 PDT
WebKit Commit Bot
Comment 2 2019-09-13 22:14:19 PDT
Comment on attachment 378558 [details] Patch Clearing flags on attachment: 378558 Committed r249869: <https://trac.webkit.org/changeset/249869>
WebKit Commit Bot
Comment 3 2019-09-13 22:14:20 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2019-09-13 22:15:17 PDT
Note You need to log in before you can comment on or make changes to this bug.